# vcpkg-export

./: .gitignore  CMakeLists.txt  readme.md  vcpkg.json  vcpkg_export.py
